Fixes layout issues

--- a/src/index.scss
+++ b/src/index.scss
@@ -45,6 +45,7 @@ button {
 }
 
 .timeline {
+  height: 150px;
   background: #222;
 }
 
@@ -53,7 +54,7 @@ button {
 
   img {
     z-index: 10;
-    width: 50px;
+    height: 50px;
 
     &:hover {
       border: 2px solid black;
